--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -25,7 +25,8 @@
         "vi": "Vietnamese",
         "nl": "Dutch",
         "de": "German",
-        "fr": "French"
+        "fr": "French",
+        "pt": "Brazilian Portuguese"
     },
     "quit_cursor": {
         "start": "开始退出 Cursor",
