--- a/locales/vi.json
+++ b/locales/vi.json
@@ -23,7 +23,8 @@
         "vi": "Tiếng Việt",
         "nl": "Dutch",
         "de": "Germa",
-        "fr": "French"
+        "fr": "French",
+        "pt": "Brazilian Portuguese"
     },
     "quit_cursor": {
         "start": "Bắt Đầu Thoát Cursor",
