Added Russian Locale
Added a Russian locale and fixed my typo in readme

--- a/locales/en.json
+++ b/locales/en.json
@@ -25,7 +25,9 @@
         "vi": "Vietnamese",
         "nl": "Dutch",
         "de": "German",
-        "fr": "French"
+        "fr": "French",
+        "pt": "Portuguese",
+        "ru": "Russian"
     },
     "quit_cursor": {
         "start": "Start Quitting Cursor",
