--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -24,7 +24,8 @@
         "nl": "Dutch",
         "de": "German",
         "fr": "French",
-        "pt": "Brazilian Portuguese"
+        "pt": "Portuguese",
+        "ru": "Russian"
     },
     "quit_cursor": {
         "start": "開始退出 Cursor",
