--- a/locales/fr.json
+++ b/locales/fr.json
@@ -19,14 +19,15 @@
         "totally_reset": "Réinitialisation Complète de Cursor"
     },
     "languages": {
-        "en": "English",
+        "en": "Anglais",
         "zh_cn": "简体中文",
         "zh_tw": "繁體中文",
-        "vi": "Tiếng Việt",
-        "nl": "Nederlands",
-        "de": "Deutsch",
+        "vi": "Vietnamien",
+        "nl": "Néerlandais",
+        "de": "Allemand",
         "fr": "Français",
-        "pt": "Brazilian Portuguese"
+        "pt": "Brazilian Portuguese",
+        "ru": "Russe"
     },
     "quit_cursor": {
         "start": "Début de la Fermeture de Cursor",
