--- a/locales/de.json
+++ b/locales/de.json
@@ -26,7 +26,7 @@
         "nl": "Niederländisch",
         "de": "Deutsch",
         "fr": "Französisch",
-        "pt": "Brazilian Portuguese",
+        "pt": "Portugiesisch",
         "ru": "Russisch"
     },
     "quit_cursor": {
