--- a/locales/fr.json
+++ b/locales/fr.json
@@ -20,13 +20,13 @@
     },
     "languages": {
         "en": "Anglais",
-        "zh_cn": "简体中文",
-        "zh_tw": "繁體中文",
+        "zh_cn": "Chinois simplifié",
+        "zh_tw": "Chinois traditionnel",
         "vi": "Vietnamien",
         "nl": "Néerlandais",
         "de": "Allemand",
         "fr": "Français",
-        "pt": "Brazilian Portuguese",
+        "pt": "Portugais",
         "ru": "Russe"
     },
     "quit_cursor": {
