--- a/locales/pt.json
+++ b/locales/pt.json
@@ -20,8 +20,8 @@
     },
     "languages": {
         "en": "Inglês",
-        "zh_cn": "简体中文",
-        "zh_tw": "繁體中文",
+        "zh_cn": "Chinês Simplificado",
+        "zh_tw": "Chinês Tradicional",
         "vi": "Vietnamita",
         "nl": "Holandês",
         "de": "Alemão",
