--- a/locales/vi.json
+++ b/locales/vi.json
@@ -17,15 +17,15 @@
         "totally_reset": "Đặt lại hoàn toàn Cursor"
     },
     "languages": {
-        "en": "English",
-        "zh_cn": "简体中文",
-        "zh_tw": "繁體中文",
-        "vi": "Vietnamese",
-        "nl": "Dutch",
-        "de": "German",
-        "fr": "French",
-        "pt": "Brazilian Portuguese",
-        "ru": "Russian"
+        "en": "Tiếng Anh",
+        "zh_cn": "Tiếng Trung Giản Thể",
+        "zh_tw": "Tiếng Trung Phồn Thể",
+        "vi": "Tiếng Việt",
+        "nl": "Tiếng Hà Lan",
+        "de": "Tiếng Đức",
+        "fr": "Tiếng Pháp",
+        "pt": "Tiếng Bồ Đào Nha",
+        "ru": "Tiếng Nga"
     },
     "quit_cursor": {
         "start": "Bắt Đầu Thoát Cursor",
