--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -19,15 +19,15 @@
         "totally_reset": "完全重置 Cursor"
     },
     "languages": {
-        "en": "English",
+        "en": "英语",
         "zh_cn": "简体中文",
-        "zh_tw": "繁體中文",
-        "vi": "Vietnamese",
-        "nl": "Dutch",
-        "de": "German",
-        "fr": "French",
-        "pt": "Portuguese",
-        "ru": "Russian"
+        "zh_tw": "繁体中文",
+        "vi": "越南语",
+        "nl": "荷兰语",
+        "de": "德语",
+        "fr": "法语",
+        "pt": "葡萄牙语",
+        "ru": "俄语"
     },
     "quit_cursor": {
         "start": "开始退出 Cursor",
