--- a/locales/vi.json
+++ b/locales/vi.json
@@ -14,7 +14,10 @@
         "press_enter": "Nhấn Enter để Thoát",
         "disable_auto_update": "Tắt tự động cập nhật Cursor",
         "lifetime_access_enabled": "ĐÃ BẬT TRUY CẬP TRỌN ĐỜI",
-        "totally_reset": "Đặt lại hoàn toàn Cursor"
+        "totally_reset": "Đặt lại hoàn toàn Cursor",
+        "outdate": "Quá cũ",
+        "temp_github_register": "Đăng ký GitHub tạm thời",
+        "coming_soon": "Sắp ra mắt"
     },
     "languages": {
         "en": "Tiếng Anh",
@@ -93,7 +96,6 @@
         "check_version_failed": "Kiểm Tra Phiên Bản Thất Bại: {error}",
         "stack_trace": "Dấu Vết Ngăn Xếp",
         "version_too_low": "Phiên Bản Cursor Quá Thấp: {version} < 0.45.0"
-        
     },
     "register": {
         "title": "Công Cụ Đăng Ký Cursor",
@@ -286,7 +288,7 @@
         "update_skipped": "Bỏ Qua Cập Nhật.",
         "invalid_choice": "Lựa Chọn Không Hợp Lệ. Vui Lòng Nhập 'Y' Hoặc 'n'.",
         "development_version": "Phiên Bản Phát Triển {current} > {latest}",
-        "changelog_title": "Changelog"
+        "changelog_title": "Nhật ký thay đổi"
     },
     "totally_reset": {
         "title": "Đặt lại hoàn toàn Cursor",
