--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -361,7 +361,15 @@
         "removing_electron_localstorage_files": "正在移除 Electron localStorage 檔案",
         "electron_localstorage_files_removed": "已移除 Electron localStorage 檔案",
         "electron_localstorage_files_removal_error": "移除 Electron localStorage 檔案時出錯：{error}",
-        "removing_electron_localstorage_files_completed": "Electron localStorage 檔案移除完成"
+        "removing_electron_localstorage_files_completed": "Electron localStorage 檔案移除完成",
+        "warning_title": "警告",
+        "warning_1": "此操作將刪除所有 Cursor AI 設定、",
+        "warning_2": "配置與快取資料。此操作無法還原。",
+        "warning_3": "您的程式碼檔案將 **不會** 受到影響，且此工具僅針對",
+        "warning_4": "Cursor AI 編輯器檔案與試用偵測機制。",
+        "warning_5": "系統中的其他應用程式不會受到影響。",
+        "warning_6": "執行此工具後，您需要重新設定 Cursor AI。",
+        "warning_7": "請自行承擔風險"
     },
     "github_register": {
         "title": "GitHub + Cursor AI 注册自动化",
