Update version to 1.7.17, add 'fixed soon' translation key in English and Chinese (Simplified and Traditional), and modify CHANGELOG to reflect recent fixes and updates.

--- a/locales/en.json
+++ b/locales/en.json
@@ -21,7 +21,8 @@
         "temp_github_register": "Temporary GitHub Register",
         "admin_required": "Running as executable, administrator privileges required.",
         "admin_required_continue": "Continuing without administrator privileges.",
-        "coming_soon": "Coming Soon"
+        "coming_soon": "Coming Soon",
+        "fixed_soon": "Fixed Soon"
     },
     "languages": {
         "en": "English",
